--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ProjectPart1</string>
     <string name="you_lost_text">You Lost!</string>
+    <string name="start_game_text_main_BTN">Start Game</string>
 </resources>
