--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,13 @@
     <string name="app_name">ProjectPart1</string>
     <string name="you_lost_text">You Lost!</string>
     <string name="start_game_text_main_BTN">Start Game</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fast_mode">Fast Mode</string>
+    <string name="slow_mode">Slow Mode</string>
+    <string name="button_mode">Button Mode</string>
+    <string name="sensor_mode">Sensor Mode</string>
+    <string name="go_to_high_score_table">Go To High Score Table</string>
+    <string name="_0">0</string>
+    <string name="no_players">No Players</string>
 </resources>
